manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-fastapi-app
spec:
  template:
    spec:
      containers:
        - name: app
          image: ghcr.io/larsks/example-fastapi-app:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: http
