manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-fastapi-app
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
